# CentaurusTest

./: .gitignore  CMakeLists.txt  README.md  autostart-client.bat  build client vs22.bat  build server vs22.bat  build vs22.bat  server.properties
Client/: CMakeLists.txt
Client/sources/: Client.cpp  Client.h  main.cpp
Server/: CMakeLists.txt
Server/sources/: Server.cpp  Server.h  main.cpp
Utils/: CMakeLists.txt  ClientInfo.h  Constants.h
Utils/ConfigReader/: ConfigReader.cpp  ConfigReader.h
Utils/SocketManager/: SocketManager.cpp  SocketManager.h
